<resources>
    <string name="app_name">OxyGrant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_sell_oxygen">SELL OXYGEN</string>
    <string name="button_add_supply">ADD SUPPLY</string>
    <string name="button_i_need_oxygen">I need Oxygen</string>
    <string name="button_i_have_oxygen">I have Oxygen</string>
    <string name="user_name">Name</string>
    <string name="user_phone">Mobile Number</string>
    <string name="isWhatsApp">Above number is WhatsApp number</string>
    <string name="quantity">Available Oxygen Quantity</string>
    <string name="user_location">Location</string>
    <string name="save">Save</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="button_submit">Submit</string>
</resources>